Подключил css к странице Сфер

--- a/src/main/resources/templates/spheres.html
+++ b/src/main/resources/templates/spheres.html
@@ -4,36 +4,7 @@
 <meta charset="UTF-8">
 <title>Сферы</title>
 
-<style>
-
-	* {
-	
-		text-decoration: none;
-		box-sizing: border-box;
-
-	}
-	
-	
-	.container {
-
-		background-color: #ccecff;
-
-	}
-
-	li {
-
-		margin-top: 10px;
-
-	}
-
-	li a, li li {
-
-		font-size: 15px;
-		color: #2d87bc;
-
-	}
-
-</style>
+<link rel="stylesheet" href="/css/spheres.css">
 
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
