Выполнил вкладку theme рабочей

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,7 +37,7 @@
 			<li class="nav-item"><a class="nav-link" href="/news">Лента</a></li>
 			<li class="nav-item"><a class="nav-link" href="/subscription">Подписки</a></li>
 			<li class="nav-item"><a class="nav-link" href="/statistics">Статистика</a></li>
-			<li class="nav-item"><a class="nav-link" href="/themes">Темы</a></li>
+			<li class="nav-item"><a class="nav-link" href="/theme">Темы</a></li>
 
 		</ul>
 		<div>
