--- a/src/main/resources/templates/theme.html
+++ b/src/main/resources/templates/theme.html
@@ -67,7 +67,8 @@
 			</ul>
 		</div>
 		<a class="btn btn-primary" href="/theme/add" role="button">Добавить
-			theme</a>
+			тему</a>
+			
 
 </body>
 </html>
