--- a/src/main/resources/templates/spheres.html
+++ b/src/main/resources/templates/spheres.html
@@ -40,16 +40,16 @@
 						
 							<li class="h5">Политика
 								<ul>
-									<li><a href="">Государственный строй</a></li>
-									<li><a href="">Политические режимы</a></li>
-									<li><a href="">Риторика</a></li>
-									<li><a href="">Либералы и консерваторы</a></li>
+									<li><a href="/theme">Государственный строй</a></li>
+									<li><a href="/theme">Политические режимы</a></li>
+									<li><a href="/theme">Риторика</a></li>
+									<li><a href="/theme">Либералы и консерваторы</a></li>
 								</ul>
 							</li>
 
 							<li class="h5">Техника
 								<ul>
-									<li><a href="">Инновации</a></li>
+									<li><a href="/theme">Инновации</a></li>
 								</ul>
 							</li>
 
@@ -63,9 +63,9 @@
 						
 							<li class="h5">Творчество
 								<ul>
-									<li><a href="">Современное искусство</a></li>
-									<li><a href="">Художественные направления</a></li>
-									<li><a href="">Цензура</a></li>
+									<li><a href="/theme">Современное искусство</a></li>
+									<li><a href="/theme">Художественные направления</a></li>
+									<li><a href="/theme">Цензура</a></li>
 								</ul>
 							</li>
 
@@ -79,13 +79,13 @@
 						
 							<li class="h5">Медиа
 								<ul>
-									<li><a href="">СМИ</a></li>
-									<li><a href="">Пропаганда</a></li>
+									<li><a href="/theme">СМИ</a></li>
+									<li><a href="/theme">Пропаганда</a></li>
 								</ul>
 							</li>
 							<li class="h5">Образование
 								<ul>
-									<li><a href="">Кризис средней специальности</a></li>
+									<li><a href="/theme">Кризис средней специальности</a></li>
 								</ul>
 							</li>
 							<li class="h5">Другое</li>
