Сделал заготовку под создание дебата 1) изменил LobbyController(добавил метод createDebate)

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,17 +36,18 @@
 			<li class="nav-item"><a class="nav-link" href="/spheres">Сферы</a></li>
 		</ul>
 
-		<a class="nav-link btn btn-info mt-3 mr-3" href="/createDebate">Создать
-			Дебаты</a> <a class="nav-link btn btn-info mt-3 mr-3"
-			href="/createDiscussion">Создать Дискуссию</a>
+		<a class="nav-link btn btn-info mt-3 mr-3"
+			href="/createDebate">Создать Дебаты</a> <a
+			class="nav-link btn btn-info mt-3 mr-3" href="/createDiscussion">Создать
+			Дискуссию</a>
 
 		<!-- Профиль -->
 		<div class="btn-group rounded-circle mt-3 mr-3 dropdown">
-			<a href="#" id="imageDropdown" data-toggle="collapse" data-target="#navbar">
-				<img class="rounded-circle" src="/images/img_avatar.jpg" alt="Person"
-				width="60" height="60">
+			<a href="#" id="imageDropdown" data-toggle="collapse"
+				data-target="#navbar"> <img class="rounded-circle"
+				src="/images/img_avatar.jpg" alt="Person" width="60" height="60">
 			</a>
-				<!-- Выпадающее меню -->
+			<!-- Выпадающее меню -->
 			<div id="navbar" class="dropdown-menu dropdown-menu-right">
 				<a class="dropdown-item" href="#"> <img class="rounded-circle"
 					src="/images/img_avatar.jpg" alt="Person" width="60" height="60">
@@ -57,8 +58,8 @@
 					class="dropdown-item" href="/subscription">Подписчики</a> <a
 					class="dropdown-item" href="/fallowers">Подписки</a>
 				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Настройки</a>
-				<a class="dropdown-item" href="#">Выйти</a>
+				<a class="dropdown-item" href="#">Настройки</a> <a
+					class="dropdown-item" href="#">Выйти</a>
 			</div>
 		</div>
 		<!-- Конец Профиля -->
