--- a/src/main/resources/templates/createDebate.html
+++ b/src/main/resources/templates/createDebate.html
@@ -6,30 +6,32 @@
 <title>Создать дебаты</title>
 </head>
 <body>
-<div class="container" th:fragment="content">
+	<div class="container" th:fragment="content">
 		<h1>Создание нового дебата</h1>
-		<form class="mt-3" th:action="@{/createDebate}" th:object="${lobby}" method="post">
+		<form class="mt-3" th:action="@{/createDebate}" th:object="${lobby}"
+			method="post">
 			<div class="form-group">
-				<label for="name">Название дебата</label>
-				<input type="text" class="form-control" id="name" name="name">
+				<label for="name">Название дебата</label> <input type="text"
+					class="form-control" id="name" name="name">
 			</div>
 			<div class="form-group">
-				<label for="spheres">Сфера</label>
-				<select class="form-control" id="spheres" name="spheres">
-					<option th:each="spheres : ${spheres}" th:value="${spheres.id}" th:text="${spheres.name}"/>
+				<label for="spheres">Сфера</label> <select class="form-control"
+					id="spheres" name="spheres">
+					<option th:each="spheres : ${spheres}" th:value="${spheres.id}"
+						th:text="${spheres.name}" />
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="name">Тема</label>
-				<input type="text" class="form-control" id="name" name="name">
+				<label for="name">Тема</label> <input type="text"
+					class="form-control" id="name" name="name">
 			</div>
 			<div class="form-group">
-				<label for="name">Длительность дебата (в минутах)</label>
-				<input type="text" class="form-control" id="name" name="name">
+				<label for="name">Длительность дебата (в минутах)</label> <input
+					type="text" class="form-control" id="name" name="name">
 			</div>
 			<div class="form-group">
-				<label for="name">Таймаут (в минутах)</label>
-				<input type="text" class="form-control" id="name" name="name">
+				<label for="name">Таймаут (в минутах)</label> <input type="text"
+					class="form-control" id="name" name="name">
 			</div>
 			<div class="form-check">
 				<label class="form-check-label"> <input type="checkbox"
@@ -38,13 +40,15 @@
 			</div>
 			<div class="form-check">
 				<label class="form-check-label"> <input type="checkbox"
-					class="form-check-input" value="">Видимость зрительского чата
+					class="form-check-input" value="">Видимость зрительского
+					чата
 				</label>
 			</div>
-			
-				
-			
-			<button type="submit" class="form-group btn btn-primary">Создать дебат</button>
+
+
+
+			<button type="submit" class="form-group btn btn-primary">Создать
+				дебат</button>
 
 			<script type="text/javascript">
 				$('.selectpicker').selectpicker();
