--- a/src/main/resources/templates/themes.html
+++ b/src/main/resources/templates/themes.html
@@ -30,26 +30,28 @@
 	
 	<link rel="stylesheet" href="/css/themes.css">
 		
-		<div class="container" th:each="themes : ${themes}">
+		<div class="card-columns">
 		
-  			<div class="row">
+  			<div class="card" th:each="themes : ${themes}">
 
-    			<img src="/images/img_avatar.jpg" alt="Картинка" class="img-thumbnail">
+				<div class="text-center">
+  					<img th:src="@{${'../images/'+themes.backgroundImage}}" alt="Картинка" class="img-thumbnail">
+				</div>
 
-    			<div>
+    			<div class="card-body">
 
-    				<p class="h3 name" th:text="${themes.name}"></p>
+    				<p class="h3 name card-title" th:text="${themes.name}"></p>
     			
 						<div class="positions h4">
-    					<p th:text="${themes.firstPosition}"></p><p th:text="${themes.secondPosition}"></p>
+    					<p class="card-text" th:text="${themes.firstPosition}"></p><p th:text="${themes.secondPosition}"></p>
     				</div>
 
-    				<p>Создатель: <span class="h5" th:text="${themes.creator.name}"></span></p>
+    				<p class="card-text">Создатель: <span class="h5" th:text="${themes.creator.name}"></span></p>
 
-    				<p>Количество проводимых дебатов: <span class="h5">1</span></p>
-    				<p>Количество проводимых дискуссий: <span class="h5">3</span></p>
+    				<p class="card-text">Количество проводимых дебатов: <span class="h5">1</span></p>
+    				<p class="card-text">Количество проводимых дискуссий: <span class="h5">3</span></p>
 
-    				<p>Количество подписок: <span class="h5">12</span></p>
+    				<p class="card-text">Количество подписок: <span class="h5">12</span></p>
 
     			</div>
 
@@ -58,5 +60,6 @@
 		</div>
 		
 	</div>
+	
 </body>
 </html>
