1) Добавил страницу в разработке

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,11 +5,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Header</title>
-<link rel="stylesheet" href="css/mainStyle.css">
 <link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	crossorigin="anonymous"></script>
@@ -21,49 +22,56 @@
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+
 <style type="text/css">
+.container-fluid {
+	width: 960px !important;
+}
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm rounded border shadow-sm"
-		th:fragment="header(search)">
-		<a class="navbar-brand" href="/"><img
-			th:src="@{'/images/logo.jpg'}" width="60"> </a>
+	<div class="container-fluid">
+		<nav class="navbar navbar-expand-sm rounded border shadow-sm"
+			th:fragment="header(search)">
+			<a class="navbar-brand" href="/"><img
+				th:src="@{'/images/logo.jpg'}" width="60"> </a>
 
-		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-			<li class="nav-item"><a class="nav-link" href="/news">Лента</a></li>
-			<li class="nav-item"><a class="nav-link" href="/statistics">Статистика</a></li>
-			<li class="nav-item"><a class="nav-link" href="/spheres">Сферы</a></li>
-		</ul>
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item"><a class="nav-link" href="/inDeveloping">Лента</a></li>
+				<li class="nav-item"><a class="nav-link" href="/inDeveloping">Статистика</a></li>
+				<li class="nav-item"><a class="nav-link" href="/spheres">Сферы</a></li>
+			</ul>
 
-		<a class="nav-link btn btn-info mt-3 mr-3"
-			href="/createDebate">Создать Дебаты</a> <a
-			class="nav-link btn btn-info mt-3 mr-3" href="/createDiscussion">Создать
-			Дискуссию</a>
+			<a class="nav-link btn btn-info mt-3 mr-3" href="/createDebate">Создать
+				Дебаты</a> <a class="nav-link btn btn-info mt-3 mr-3"
+				href="/inDeveloping">Создать Дискуссию</a>
 
-		<!-- Профиль -->
-		<div class="btn-group rounded-circle mt-3 mr-3 dropdown">
-			<a href="#" id="imageDropdown" data-toggle="collapse"
-				data-target="#navbar"> <img class="rounded-circle"
-				src="/images/img_avatar.jpg" alt="Person" width="60" height="60">
-			</a>
-			<!-- Выпадающее меню -->
-			<div id="navbar" class="dropdown-menu dropdown-menu-right">
-				<a class="dropdown-item" href="#"> <img class="rounded-circle"
+			<!-- Профиль -->
+			<div class="btn-group rounded-circle mt-3 mr-3 dropdown">
+				<a href="#" id="imageDropdown" data-toggle="collapse"
+					data-target="#navbar"> <img class="rounded-circle"
 					src="/images/img_avatar.jpg" alt="Person" width="60" height="60">
-				</a> <span class="dropdown-item-text">Константин</span> <span
-					class="dropdown-item-text">Рейтинг: 34</span>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="/profile">Профиль</a> <a
-					class="dropdown-item" href="/subscription">Подписчики</a> <a
-					class="dropdown-item" href="/fallowers">Подписки</a>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Настройки</a> <a
-					class="dropdown-item" href="#">Выйти</a>
+				</a>
+				<!-- Выпадающее меню -->
+				<div id="navbar" class="dropdown-menu dropdown-menu-right">
+					<a class="dropdown-item" href="#"> <img class="rounded-circle"
+						src="/images/img_avatar.jpg" alt="Person" width="60" height="60">
+					</a> <span class="dropdown-item-text">Константин</span> <span
+						class="dropdown-item-text">Рейтинг: 34</span>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="/inDeveloping">Профиль</a> <a
+						class="dropdown-item" href="/inDeveloping">Подписчики</a> <a
+						class="dropdown-item" href="/inDeveloping">Подписки</a>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="/inDeveloping">Настройки</a> <a
+						class="dropdown-item" href="/inDeveloping">Выйти</a>
+				</div>
 			</div>
-		</div>
-		<!-- Конец Профиля -->
-	</nav>
+			<!-- Конец Профиля -->
+		</nav>
+	</div>
 </body>
 </html>
 
