--- a/src/main/resources/templates/createDebate.html
+++ b/src/main/resources/templates/createDebate.html
@@ -7,48 +7,85 @@
 </head>
 <body>
 	<div class="container" th:fragment="content">
-		<h1>Создание нового дебата</h1>
+		<div class="text-center">
+			<h1>Создание новых дебатов</h1>
+		</div>
 		<form class="mt-3" th:action="@{/createDebate}" th:object="${lobby}"
 			method="post">
+			
 			<div class="form-group">
-				<label for="name">Название дебата</label> <input type="text"
+				<label for="name">Название дебатов</label> <input type="text"
 					class="form-control" id="name" name="name">
 			</div>
 			<div class="form-group">
 				<label for="spheres">Сфера</label> <select class="form-control"
 					id="spheres" name="spheres">
-					<option th:each="spheres : ${spheres}" th:value="${spheres.id}"
-						th:text="${spheres.name}" />
+					<option th:each="sphere : ${spheres}" th:value="${sphere.id}"
+						th:text="${sphere.name}" />
 				</select>
 			</div>
+			<div class="form-group">
+				<label for="spheres">Подсфера</label> <select class="form-control"
+					id="spheres" name="spheres">
+					<option th:each="sphere : ${spheres}" th:value="${sphere.id}"
+						th:text="${sphere.name}" />
+				</select>
+			</div>
+
+
+
+
 			<div class="form-group">
 				<label for="name">Тема</label> <input type="text"
 					class="form-control" id="name" name="name">
 			</div>
+			
 			<div class="form-group">
-				<label for="name">Длительность дебата (в минутах)</label> <input
-					type="text" class="form-control" id="name" name="name">
+				<label for="image">Картинка дебатов</label>
+				<div class="custom-file">
+					<input type="file" class="custom-file-input" id="customFile">
+					<label class="custom-file-label" for="customFile">Выберите
+						файл</label>
+				</div>
 			</div>
 			<div class="form-group">
-				<label for="name">Таймаут (в минутах)</label> <input type="text"
+				<label for="name">Длительность дебатов (в минутах)</label> <input
+					type="number" class="form-control" aria-label="Минуты" id="name" name="name">
+			</div>
+			<div class="form-group">
+				<label for="name">Таймаут (в минутах)</label> <input type="number"
+					class="form-control" aria-label="Минуты" id="name" name="name"> <small
+					id="yearHelp" class="form-text text-muted">Таймаут - время
+					ожидания ответа спикера. За отсутсвие ответа за время таймера -
+					последует штраф к репутации спикера. </small>
+			</div>
+			<div class="form-group">
+				<label for="name">Штраф</label> <input type="number"
 					class="form-control" id="name" name="name">
 			</div>
 			<div class="form-check">
 				<label class="form-check-label"> <input type="checkbox"
 					class="form-check-input" value="">Цензура
-				</label>
+				</label> <small id="yearHelp" class="form-text text-muted">Возможно
+					ли использовать нецензурную лексику</small>
+
 			</div>
 			<div class="form-check">
 				<label class="form-check-label"> <input type="checkbox"
 					class="form-check-input" value="">Видимость зрительского
 					чата
-				</label>
+				</label> <small id="yearHelp" class="form-text text-muted">Видят ли
+					спикеры зрительский чат</small>
+
 			</div>
 
 
-
-			<button type="submit" class="form-group btn btn-primary">Создать
-				дебат</button>
+			<br>
+			<div class="text-center">
+				<button type="submit"
+					class="form-group btn btn-outline-info btn-lg  btn-block">Создать
+					дебаты</button>
+			</div>
 
 			<script type="text/javascript">
 				$('.selectpicker').selectpicker();
