--- a/src/main/webapp/css/spheres.css
+++ b/src/main/webapp/css/spheres.css
@@ -30,6 +30,34 @@ li {
 			
 }
 
+.container {
+  max-width: 60em;
+  @include make-container();
+}
+.row {
+  @include make-row();
+}
+.content-main {
+  @include make-col();
+ 
+  @media (max-width: 32em) {
+    @include make-col-span(6);
+  }
+  @media (min-width: 32.1em) {
+    @include make-col-span(8);
+  }
+}
+.content-secondary {
+  @include make-col();
+ 
+  @media (max-width: 32em) {
+    @include make-col-span(6);
+  }
+  @media (min-width: 32.1em) {
+    @include make-col-span(4);
+  }
+}
+
 .card-columns {
   @include media-breakpoint-only(lg) {
     column-count: 4;
