--- a/src/main/resources/templates/createDebate.html
+++ b/src/main/resources/templates/createDebate.html
@@ -6,7 +6,7 @@
 <title>Создать дебаты</title>
 </head>
 <body>
-	<div class="container" th:fragment="content">
+	<div class="container" th:fragment="content" th:with="choosenSphere=${spheres[0]}">
 		<div class="text-center">
 			<h1>Создание новых дебатов</h1>
 		</div>
@@ -20,59 +20,62 @@
 			<div class="form-group">
 				<label for="spheres">Сфера</label> <select class="form-control"
 					id="spheres" name="spheres">
-					<option th:each="sphere : ${spheres}" th:value="${sphere.id}"
-						th:text="${sphere.name}" />
+					<option th:if="${sphere.id < 99}" th:each="sphere : ${spheres}" th:value="${sphere.id}"
+						th:text="${sphere.name}" th:with="choosenSphere=${sphere}">
+						
 				</select>
 			</div>
+		
+
 			<div class="form-group">
-				<label for="spheres">Подсфера</label> <select class="form-control"
+				<label for="spheres">Подсфера</label>
+				<select class="form-control"
 					id="spheres" name="spheres">
-					<option th:each="sphere : ${spheres}" th:value="${sphere.id}"
-						th:text="${sphere.name}" />
+				<option  th:each="child : ${choosenSphere.children}" th:text="${child.name}">
+					
 				</select>
 			</div>
-
-
-
+			
+			
 
 			<div class="form-group">
 				<label for="name">Тема</label> <input type="text"
-					class="form-control" id="name" name="name">
+					class="form-control" id="theme" name="theme">
 			</div>
 			
 			<div class="form-group">
 				<label for="image">Картинка дебатов</label>
 				<div class="custom-file">
-					<input type="file" class="custom-file-input" id="customFile">
+					<input type="file" class="custom-file-input" id="backgroundImage" name="backgroundImage">
 					<label class="custom-file-label" for="customFile">Выберите
 						файл</label>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="name">Длительность дебатов (в минутах)</label> <input
-					type="number" class="form-control" aria-label="Минуты" id="name" name="name">
+					type="number" class="form-control" aria-label="Минуты" id="generalTime" name="generalTime">
 			</div>
 			<div class="form-group">
 				<label for="name">Таймаут (в минутах)</label> <input type="number"
-					class="form-control" aria-label="Минуты" id="name" name="name"> <small
+					class="form-control" aria-label="Минуты" id="timeoutTime" name="timeoutTime"> <small
 					id="yearHelp" class="form-text text-muted">Таймаут - время
 					ожидания ответа спикера. За отсутсвие ответа за время таймера -
 					последует штраф к репутации спикера. </small>
 			</div>
 			<div class="form-group">
 				<label for="name">Штраф</label> <input type="number"
-					class="form-control" id="name" name="name">
+					class="form-control" id="timeoutFine" name="timeoutFine">
 			</div>
 			<div class="form-check">
 				<label class="form-check-label"> <input type="checkbox"
-					class="form-check-input" value="">Цензура
+					class="form-check-input" id="isCensorship"  name="isCensorship">Цензура
 				</label> <small id="yearHelp" class="form-text text-muted">Возможно
 					ли использовать нецензурную лексику</small>
 
 			</div>
 			<div class="form-check">
 				<label class="form-check-label"> <input type="checkbox"
-					class="form-check-input" value="">Видимость зрительского
+					class="form-check-input" id="isSpectatorChatVisible"  name="isSpectatorChatVisible">Видимость зрительского
 					чата
 				</label> <small id="yearHelp" class="form-text text-muted">Видят ли
 					спикеры зрительский чат</small>
