--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -59,7 +59,7 @@
 					<a class="dropdown-item" href="#"> <img class="rounded-circle"
 						src="/images/img_avatar.jpg" alt="Person" width="60" height="60">
 					</a> <span class="dropdown-item-text">Константин</span> <span
-						class="dropdown-item-text">Рейтинг: 34</span>
+						class="dropdown-item-text">Репутация: 34</span>
 					<div class="dropdown-divider"></div>
 					<a class="dropdown-item" href="/inDeveloping">Профиль</a> <a
 						class="dropdown-item" href="/inDeveloping">Подписчики</a> <a
