--- a/src/main/resources/templates/createDebate.html
+++ b/src/main/resources/templates/createDebate.html
@@ -8,41 +8,43 @@
 <body>
 	<div class="container" th:fragment="content"
 		th:with="choosenSphere=${spheres[0]}">
-		<div class="text-center">
+		<div class="text-center" th:with="sphereId=${spheresId}">
 			<h1>Создание новых дебатов</h1>
 		</div>
 		<form class="mt-3" th:action="@{/createDebate}" th:object="${lobby}"
 			method="post">
 
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<label for="name">Название дебатов</label> <input type="text"
 					class="form-control" id="name" name="name">
-			</div>
+			</div> -->
+<!-- 
 			<div class="form-group">
 				<label for="spheres">Сфера</label> <select class="form-control"
 					id="spheres" name="spheres">
-					<option th:if="${sphere.id < 99}" th:each="sphere : ${spheres}"
+					<option id="something" th:if="${sphere.id < 99}" th:each="sphere : ${spheres}"
 						th:value="${sphere.id}" th:text="${sphere.name}"
 						th:with="choosenSphere=${sphere}">
 				</select>
-			</div>
+			
 
 
-			<div class="form-group">
+			
 				<label for="spheres">Подсфера</label> <select class="form-control"
 					id="spheres" name="spheres">
 					<option th:each="child : ${choosenSphere.children}"
-						th:text="${child.name}">
+						th:text="${child.name}" name="subSphereId"  value="${child.id}">
 				</select>
-			</div>
-
+			
+</div> -->
 
 
 			<div class="form-group">
 				<label for="name">Тема</label> <select class="form-control"
 					id="theme" name="theme">
 					<option th:each="theme : ${theme}" th:value="${theme.id}"
-						th:text="${theme.name}"></select>
+						th:text="${theme.name}">
+				</select>
 			</div>
 
 			<div class="form-group">
@@ -62,12 +64,6 @@
 			</div>
 			<div class="form-group">
 				<label for="name">Таймаут (в минутах)</label>
-				<!-- <input type="number"
-					min="0" value="2" class="form-control" aria-label="Минуты" id="timeoutTime" name="timeoutTime"> <small
-					id="yearHelp" class="form-text text-muted">Таймаут - время
-					ожидания ответа спикера. За отсутсвие ответа за время таймера -
-					последует штраф к репутации спикера. </small> -->
-
 				<input type="range" name="timeoutTime" id="timeoutTime" min="1"
 					step="1" max="30" value="2"
 					oninput="timeoutTimeOutput.value = timeoutTime.value" />
@@ -105,6 +101,11 @@
 
 			<script type="text/javascript">
 				$('.selectpicker').selectpicker();
+
+	
+				$('#something').click(function() {
+					location.reload();
+				});
 			</script>
 		</form>
 	</div>
