--- a/src/main/resources/templates/spheres.html
+++ b/src/main/resources/templates/spheres.html
@@ -5,50 +5,79 @@
 <title>Сферы</title>
 
 <link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous">
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
 
 <script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-	crossorigin="anonymous"></script>
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  crossorigin="anonymous"></script>
 
 <script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-	crossorigin="anonymous"></script>
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"></script>
 
 </head>
 <body>
-	<div class="card-columns">
-		<div class="card">
-			<div th:fragment="content">
-				<!-- <div style="height: 900px" th:fragment="content"> -->
-				<link rel="stylesheet" href="/css/spheres.css">
-				<div class="container">
-					<div class="row">
-						<ul>
-							<li th:if="${sphere.id < 99}" class="h5"
-								th:each="sphere : ${spheres}">
-								<div class="content-main">
-									<a th:href="@{'/spheres/'+${sphere.id}}"
-										th:text="${sphere.name}"> </a>
-								<ul class="h6" th:each="child : ${sphere.children}">
-									<div class="content-secondary">
-										<a th:href="@{'/themes/'+${child.id}}" th:text="${child.name}"> </a>
-								</ul>
-					</li>
-				</div>
-
-			</div>
-		</div>
-	</div>
-	</div>
-
+  <div class="card-columns">
+    <div class="card">
+      <div th:fragment="content">
+        <!-- <div style="height: 900px" th:fragment="content"> -->
+        <link rel="stylesheet" href="/css/spheres.css">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <ul>
+                <li th:if="${sphere.id < 99 && sphere.id%3 == 1 }" class="h5"
+                  th:each="sphere : ${spheres}">
+                  <div class="content-main">
+                    <a th:href="@{'/spheres/'+${sphere.id}}"
+                      th:text="${sphere.name}"> </a>
+                    <ul class="h6" th:each="child : ${sphere.children}">
+                      <div class="content-secondary">
+                        <a th:href="@{'/spheres/'+${child.id}}"
+                          th:text="${child.name}"> </a>
+                    </ul>
+                </li>
+            </div>
+            <div class="col">
+              <ul>
+                <li th:if="${sphere.id < 99 && sphere.id%3 == 2}" class="h5"
+                  th:each="sphere : ${spheres}">
+                  <div class="content-main">
+                    <a th:href="@{'/spheres/'+${sphere.id}}"
+                      th:text="${sphere.name}"> </a>
+                    <ul class="h6" th:each="child : ${sphere.children}">
+                      <div class="content-secondary">
+                        <a th:href="@{'/spheres/'+${child.id}}"
+                          th:text="${child.name}"> </a>
+                    </ul>
+                </li>
+            </div>
+            <div class="col">
+              <ul>
+                <li th:if="${sphere.id < 99 && sphere.id%3 == 0}" class="h5"
+                  th:each="sphere : ${spheres}">
+                  <div class="content-main">
+                    <a th:href="@{'/spheres/'+${sphere.id}}"
+                      th:text="${sphere.name}"> </a>
+                    <ul class="h6" th:each="child : ${sphere.children}">
+                      <div class="content-secondary">
+                        <a th:href="@{'/spheres/'+${child.id}}"
+                          th:text="${child.name}"> </a>
+                    </ul>
+                </li>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
