--- a/src/main/resources/templates/subspheres.html
+++ b/src/main/resources/templates/subspheres.html
@@ -37,11 +37,10 @@
 								th:each="sphere : ${spheres}"><a
 								th:href="@{'/spheres/'+${sphere.id}}" th:text="${sphere.name}">
 							</a>
-								<ul class="h6" 
-								    th:each="child : ${sphere.children}">
-									<a th:href="@{'/themes/'+${child.id}}" th:text="${child.name}"> </a>
-								</ul>
-							</li>
+								<ul class="h6" th:each="child : ${sphere.children}">
+									<a th:href="@{'/spheres/'+${child.id}}" th:text="${child.name}">
+									</a>
+								</ul></li>
 					</div>
 				</div>
 			</div>
