--- a/src/main/resources/templates/fragments/debateSpectatorsChat.html
+++ b/src/main/resources/templates/fragments/debateSpectatorsChat.html
@@ -116,7 +116,7 @@
 
 		</div>
 
-		<div class="container argument-label">
+		<div class="container commentary-label">
 			<input type="text" id="commentator-message" class="my-argument" placeholder="Напишите свой комментарий...">
 		</div>
 
