Сделал поиск тем в сферах

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -42,6 +42,7 @@
 				<li class="nav-item"><a class="nav-link" href="/inDeveloping">Лента</a></li>
 				<li class="nav-item"><a class="nav-link" href="/inDeveloping">Статистика</a></li>
 				<li class="nav-item"><a class="nav-link" href="/spheres">Сферы</a></li>
+				<li class="nav-item"><a class="nav-link" href="/themes">Темы</a></li>
 			</ul>
 
 			<a class="nav-link btn btn-info mt-3 mr-3" href="/createDebate">Создать
